# aoc

./: pyproject.toml
.github/workflow/: black.yml
