[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code Solutions"
authors = ["Roberto de la Banda"]

[tool.poetry.dependencies]
python = "3.10"
black = "21.12b0"
numpy = "1.21.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

